# autolabor_simulation

./: .gitignore
autolabor_description/launch/: display_autolabor_mini.launch  display_autolabor_pro1.launch
autolabor_description/urdf/: autolabor_pro1.urdf
autolabor_simulation_base/launch/: demo_simulation_base.launch  simulation_base.launch
doc/source/: autolabor_simulation_base.rst  getting_start.rst
doc/source/_build/html/_sources/: autolabor_simulation_base.rst.txt
lattice_planner/: CMakeLists.txt  package.xml
lattice_planner/config/: autolabor.rviz
lattice_planner/launch/: driver_start.launch  fake_obstacle.launch  lattice_planner.launch  matlab_core.launch  odom_pub.launch  simple_path_planner.launch
lattice_planner/msg/: pathArray.msg
lattice_planner/param/: FMPC.yaml  real_FMPC.yaml
lattice_planner/src/: fake_obstacle_publisher.cpp  odom_publisher.cpp  simple_path_planner.cpp
ros_code/: CMakeLists.txt  package.xml  packageInfo.mat
ros_code/include/ros_code/: Global_planner.h  Lattice_planner.h  MPC_controller.h  current_state_convert.h  ros_code.h  ros_code_private.h  ros_code_types.h  rosnodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.h  slros_initialize.h  visibility_control.h
ros_code/launch/: FMPC.launch
ros_code/param/: FMPC.yaml
ros_code/src/: Global_planner.cpp  Lattice_planner.cpp  MPC_controller.cpp  current_state_convert.cpp  main.cpp  ros_code.cpp  ros_code_data.cpp  rosnodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros_busmsg_conversion.cpp  slros_initialize.cpp
simulation_launch/launch/: gmapping_navigation.launch  hector_navi.launch  lidar_sim.launch  minimal_bringup.launch  without_tf.launch
simulation_launch/rviz/: autolabor.rviz
